tests/testcases/invalid/semantic/67_switch_expression_case.ciel
// Test: case labels must be literal constants, not expressions

int main() {
    int x = 5;

    // ERROR: case value must be a literal, not an expression
    switch (x) {
        case 1 + 2: {  // Should fail - expression, not literal
            x = 3;
            break;
        }
        case 5: {
            x = 5;
            break;
        }
    }

    return 0;
}
